--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   introduction_screen: ^1.0.7
   carousel_slider: ^1.4.1
   sqflite: ^1.3.0
+  flutter_svg: ^0.21.0
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +51,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+
   assets:
-    - assets/githubpet.png
+    - assets/
+    - assets/images/
+
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
