--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   get : ^3.4.3
-  get_storage : ^1.3.0
+
   introduction_screen: ^1.0.7
   carousel_slider: ^1.4.1
   sqflite: ^1.3.0
   flutter_svg: ^0.21.0
+  http: ^0.13.4
+  google_fonts: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
