--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^0.21.0
   http: ^0.13.4
   google_fonts: ^2.0.0
+  bangla_utilities: ^1.0.0
 
 
 dev_dependencies:
@@ -53,11 +54,19 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+#  fonts:
+#    - family: Roboto
+#      fonts:
+#        - asset: fonts/robotoLight.ttf
+
+
   # To add assets to your application, add an assets section, like this:
 
   assets:
     - assets/
     - assets/images/
+
+
 
 
   #   - images/a_dot_burr.jpeg
@@ -74,10 +83,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+#   fonts:
+#     - family: SolaimanLipi
+#       fonts:
+#         - asset: fonts/solaimanLipi.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
