--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,11 @@ dependencies:
 
   introduction_screen: ^1.0.7
   carousel_slider: ^1.4.1
-  sqflite: ^1.3.0
   flutter_svg: ^0.21.0
   http: ^0.13.4
   google_fonts: ^2.0.0
   bangla_utilities: ^1.0.0
+  cached_network_image: ^3.1.0
 
 
 dev_dependencies:
