--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^2.0.0
   bangla_utilities: ^1.0.0
   cached_network_image: ^3.1.0
+  connectivity_plus: ^2.3.0
 
 
 dev_dependencies:
