--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   bangla_utilities: ^1.0.0
   cached_network_image: ^3.1.0
   connectivity_plus: ^2.3.0
+  intl: ^0.17.0
+  webviewx: ^0.2.1
+  webview_flutter: ^2.8.0
+
 
 
 dev_dependencies:
