--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,9 @@ dependencies:
   cached_network_image: ^3.1.0
   connectivity_plus: ^2.3.0
   intl: ^0.17.0
-  webviewx: ^0.2.1
-  webview_flutter: ^2.8.0
-  webview_flutter_plus: ^0.2.4
+  flutter_html: ^0.11.1
+
+
 
 
 
