--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,23 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  get : ^3.4.3
+  cupertino_icons: ^1.0.4
+  get: ^4.6.5
 
-  introduction_screen: ^1.0.7
+  introduction_screen: ^3.0.2
   carousel_slider: ^4.1.1
-  flutter_svg: ^0.21.0
+#  flutter_svg: ^1.1.0
   http: ^0.13.4
-  google_fonts: ^2.0.0
+  google_fonts: ^3.0.1
   bangla_utilities: ^1.0.0
-  cached_network_image: ^3.1.0
-  connectivity_plus: ^2.3.0
+  cached_network_image: ^3.2.0
+  connectivity_plus: ^2.3.2
   intl: ^0.17.0
-  flutter_html: ^0.11.1
+  flutter_svg: ^0.23.0+1
+  flutter_html: ^2.2.1
+#  flutter_svg: ^1.0.3
+#  flutter_html: ^0.11.1
+#  flutter_html: ^2.2.1
 
 
 
