--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.17.0
   flutter_svg: ^0.23.0+1
   flutter_html: ^2.2.1
+  webview_flutter: ^2.8.0
 #  flutter_svg: ^1.0.3
 #  flutter_html: ^0.11.1
 #  flutter_html: ^2.2.1
