--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_svg: ^0.23.0+1
   flutter_html: ^2.2.1
   webview_flutter: ^2.8.0
+  group_button: ^5.0.1
+  group_radio_button: ^1.2.0
 #  flutter_svg: ^1.0.3
 #  flutter_html: ^0.11.1
 #  flutter_html: ^2.2.1
