--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   adhan_dart: ^1.0.8
   timezone: ^0.8.0
   city_picker_from_map: ^0.0.1
+  upgrader: ^4.6.1
 #  flutter_svg: ^1.0.3
 #  flutter_html: ^0.11.1
 #  flutter_html: ^2.2.1
