--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   city_picker_from_map: ^0.0.1
   upgrader: ^4.6.1
   package_info_plus: ^1.4.2
+  url_launcher: ^6.1.5
 #  flutter_svg: ^1.0.3
 #  flutter_html: ^0.11.1
 #  flutter_html: ^2.2.1
