--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   package_info_plus: ^1.4.2
   url_launcher: ^6.1.5
   store_redirect: ^2.0.1
+  firebase_analytics: ^9.3.4
 #  flutter_svg: ^1.0.3
 #  flutter_html: ^0.11.1
 #  flutter_html: ^2.2.1
