--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.1 <3.3.2'
+#  sdk: '>=2.12.0 <3.0.0'
 #  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
@@ -40,18 +41,19 @@ dependencies:
   cached_network_image: ^3.2.0
   connectivity_plus: ^2.3.2
   intl: ^0.17.0
-  flutter_svg: ^0.23.0+1
-  flutter_html: ^2.2.1
-  webview_flutter: ^2.8.0
+  flutter_svg: ^1.1.5
+  flutter_html: ^3.0.0-alpha.5
+  webview_flutter: ^3.0.4
   group_button: ^5.0.1
   group_radio_button: ^1.2.0
   adhan_dart: ^1.0.8
-  timezone: ^0.8.0
+  timezone: ^0.9.0
   city_picker_from_map: ^0.0.1
   upgrader: ^4.6.1
   package_info_plus: ^1.4.2
   url_launcher: ^6.1.5
   store_redirect: ^2.0.1
+#  firebase_analytics: ^9.3.5
   firebase_analytics: ^9.3.4
   firebase_core: ^1.22.0
 #  flutter_svg: ^1.0.3
