--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   store_redirect: ^2.0.1
   firebase_analytics: ^9.3.4
   firebase_core: ^1.22.0
+  touch_ripple_effect: ^2.2.3
 #  flutter_svg: ^1.0.3
 #  flutter_html: ^0.11.1
 #  flutter_html: ^2.2.1
