--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   firebase_analytics: ^9.3.4
   firebase_core: ^1.22.0
   touch_ripple_effect: ^2.2.3
+  social_share_plugin: ^0.4.1+2
+  flutter_share: ^2.0.0
 #  flutter_svg: ^1.0.3
 #  flutter_html: ^0.11.1
 #  flutter_html: ^2.2.1
