--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   social_share_plugin: ^0.4.1+2
   flutter_share: ^2.0.0
   youtube_player_iframe: ^2.3.0
+  photo_view: ^0.14.0
 
 #  flutter_svg: ^1.0.3
 #  flutter_html: ^0.11.1
